--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,7 +1,17 @@
 body {
   text-align: center;
-  background-color: #e7d1f0;
+  background-color: #531b69;
   font-family: 'Raleway', sans-serif;
+}
+header, label {
+  color: #b3edf1;
+  position: sticky;
+}
+#toDoList {
+  width: 80%;
+  margin-left: 10%;
+  padding: 10%;
+  background-color: #e7d1f0;
 }
 table, th, td {
   border: 2px solid #296a6e;
